# scrapnote

./: .gitignore  Cargo.toml  Makefile  README.md
common/: Cargo.toml
common/src/: lib.rs
scrapnote/: Cargo.toml  Makefile  main.js
scrapnote/js/: ace.js  list.js
scrapnote/src/: lib.rs
scrapnote/src/component/: editor.rs  selector.rs
scrapnote/static/: scrapnote.js  scrapnote_bg.wasm  styles.css
src/: api_handler.rs  config.rs  lib.rs  main.rs
static/: index.html  scrapnote.js  scrapnote_bg.wasm
