[package]
name = "scrapnote"
version = "0.1.0"
authors = ["Naoki Nakajima <n2.jima@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.6"
webview_official = "0.0.3"
rust-embed="5.6.0"
hyper = "0.13.9"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"

common = { path = "common" }

[[bin]]
name = "webview"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/lib.rs"


