[package]
name = "scrapnote"
version = "0.1.0"
authors = ["Naoki Nakajima <n2.jima@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
percent-encoding = "2.1.0"
anyhow = "1.0.34"
wasm-bindgen = "0.2"
wasm-logger = "0.2.0"
log = "0.4.6"

common = { path = "../common" }

